syntax  = "proto3";
//import "google/protobuf/any.proto";
//option optimize_for = LITE_RUNTIME;
option java_package = "org.microg.common.beans";



message ClientAuthConfig{
  ResultBody resultBody = 1;
  uint64 t_coun = 2;
  uint64 time = 3;
  uint64 flage = 4;
}


message ResultBody {
  string name = 1;
  string packeAgeName = 3;
  string url1 = 5;
  string url2 = 6;
  uint64 count = 7;
}

message TokenRequestOptions {
  bool field_1 = 1;
  string field_2 = 2;
  string field_3 = 3;
  int32 field_4 = 4;
  int32 field_5 = 5;
  int32 field_7 = 7;
  int32 version = 10;
  string sessionId = 11;
  bool field_12 = 12;
}

message ConsentUrlResponse {
  int32 resultCode = 2;
  string consentUrl = 3;
  Cookie cookie = 4;
}

message ConsentCookiesResponse {
  ConsentCookies consentCookies = 1;
}


message ConsentCookies {
  int32 resultCode = 1;
  repeated Cookie cookies = 2;
  AccountInfo accountInfo = 3;
}

message Cookie {
  string cookieName = 1;
  string cookieValue = 2;
  string domain = 3;
  string path = 4;
  int64 sameSite = 5;
  int64 secure = 6;
  int64 httpOnly = 7;
  optional int64 maxAge = 8;
  optional int64 version = 9;
  optional string discard = 10;
  optional string comment = 12;
}

message AccountInfo {
  int32 resultCode = 1;
  string accountName = 2;
  string email = 3;
  string avatar = 4;
  int64 field_5 = 5;
  int64 field_6 = 6;
  int64 field_7 = 7;
  int64 field_9 = 9;
  string androidId = 10;
  int64 field_10 = 15;
}